src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.active hr {
  @apply block;
}

.glass {
  background: rgba(255, 255, 255, 0.66);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(2.7px);
  -webkit-backdrop-filter: blur(2.7px);
  border: 1px solid rgba(255, 255, 255, 1);
}

